add rabbitmq hosts vars in compute roles

--- a/gre_to_vxlan/roles/compute/tasks/main.yml
+++ b/gre_to_vxlan/roles/compute/tasks/main.yml
@@ -11,14 +11,14 @@
 
 - name: copy neuton file to controller
   command: sudo {{ item }}
-  with_items: 
+  with_items:
    - "mv /etc/neutron /etc/neutron.bak"
-   - "scp -r node-13:/etc/neutron /etc/neutron"
+   - "scp -r {{ manager_node }}:/etc/neutron /etc/neutron"
    - "chown neutron:neutron -R /etc/neutron"
   #when: result|success
 
-- name: config nentron.conf 
-  command: openstack-config --set /etc/neutron/neutron.conf DEFAULT rabbit_hosts {{ansible_br_mgmt.ipv4.address }}:5673
+- name: config nentron.conf
+  command: openstack-config --set /etc/neutron/neutron.conf DEFAULT rabbit_hosts {{ rabbit_host }}
   #when: result|success
 
 - name: add config  linuxbridge_conf.ini
@@ -29,11 +29,11 @@
   command: openstack-config --del /etc/neutron/plugins/linuxbridge/linuxbridge_conf.ini linux_bridge  physical_interface_mappings
   #when: result|success
 
-- name: start linuxbridge 
+- name: start linuxbridge
   service: name=neutron-linuxbridge-agent state=restarted
   #when: result|success
 
-- name: add iptables to dhcp port 
+- name: add iptables to dhcp port
   command: sudo {{ item }}
   with_items:
    - "iptables -I INPUT -p udp --dport 8472 -j ACCEPT"
