--- a/gre_to_vxlan/roles/ConfigVxlan/tasks/main.yml
+++ b/gre_to_vxlan/roles/ConfigVxlan/tasks/main.yml
@@ -7,21 +7,21 @@
 
 - name: copy veth_peers
   template: src=veth_peers.sh dest=/etc/init.d/veth_peers  mode=0755
-  when: result|failed
+  # when: result|failed
 
 - name: start veth-peer
-  command: sudo {{ item }} 
+  command: sudo {{ item }}
   with_items:
    - "/etc/init.d/veth_peers start"
    - "chkconfig veth_peers on"
-  when: result|failed
+  # when: result|failed
 
 - name: config l3_agent.ini
   command: openstack-config --set /etc/neutron/l3_agent.ini DEFAULT {{ item }}
   with_items:
    - "interface_driver neutron.agent.linux.interface.BridgeInterfaceDriver"
    - "external_network_bridge ' '"
-  when: result|failed
+  # when: result|failed
 
 
 - name: config neutron.conf
@@ -33,9 +33,9 @@
    - "default_netdev_rate 1"
    - "max_netdev_rate 1000"
    - "max_netdev_burst 100"
-  when: result|failed
+  # when: result|failed
 
-- name: add config to ml2_conf.ini 
+- name: add config to ml2_conf.ini
   command: openstack-config --set /etc/neutron/plugins/ml2/ml2_conf.ini {{ item }}
   with_items:
    - "ml2 mechanism_drivers linuxbridge"
@@ -43,49 +43,41 @@
    - "ml2_type_vxlan vni_ranges 10:10000"
    - "securitygroup firewall_driver neutron.agent.linux.iptables_firewall.IptablesFirewallDriver"
    - "agent tunnel_types vxlan"
-  when: result|failed
+  # when: result|failed
 
-- name: config dhcp_agent.ini 
+- name: config dhcp_agent.ini
   command: openstack-config --set /etc/neutron/dhcp_agent.ini DEFAULT {{ item }}
   with_items:
     - "interface_driver neutron.agent.linux.interface.BridgeInterfaceDriver"
     - "dnsmasq_config_file /etc/neutron/neutron.dnsmasq.conf"
-  when: result|failed
+  #when: result|failed
 
-- name: del config to ml2_conf.ini 
+- name: del config to ml2_conf.ini
   command: openstack-config --del /etc/neutron/plugins/ml2/ml2_conf.ini ml2_type_gre tunnel_id_ranges
 
 - name: copy neutron-dnsmasq.conf
   template: src=neutron-dnsmasq.conf dest=/etc/neutron/neutron.dnsmasq.conf owner=neutron group=neutron mode=0744
 
-  when: result|failed
+  # when: result|failed
 - name: config linuxbridge_conf.ini
   command: openstack-config --set /etc/neutron/plugins/linuxbridge/linuxbridge_conf.ini {{ item }}
   with_items:
-   - "linux_bridge  physical_interface_mappings physnet1:br-p"
+    # physnet1 is public network
+   - "linux_bridge  physical_interface_mappings physnet1:br-ex-lb"
    - "vxlan enable_vxlan True"
    - "vxlan vxlan_group 224.0.0.1"
    - "securitygroup firewall_driver neutron.agent.linux.iptables_firewall.IptablesFirewallDriver"
-  when: result|failed
+  # when: result|failed
 - name: config linuxbridge_conf.ini local_ip
   command: openstack-config --set /etc/neutron/plugins/linuxbridge/linuxbridge_conf.ini vxlan local_ip {{ ansible_br_mgmt.ipv4.address }}
+  # when: result|failed
 
-  when: result|failed
-- name: restart network service
-  command: sudo {{ item }}
-  with_items:
-   - "/etc/init.d/neutron-server restart"
-   - "crm resource restart p_neutron-dhcp-agent"
-   - "crm resource restart  p_neutron-l3-agent"
-   - "/etc/init.d/neutron-linuxbridge-agent restart"
-  when: result|failed
-
-- name: add to iptables dhcp port 
+- name: add to iptables dhcp port
   command: sudo {{ item }}
   with_items:
     - "iptables -I INPUT -p udp --dport 8472 -j ACCEPT"
     - "/etc/init.d/iptables save"
-  when: result|failed
+  # when: result|failed
 
 #- name: del openvswitch agent to database
 #  command: source /root/openrc ;for i in `neutron agent-list |grep "Open vSwitch agent" |awk '{print $2}'`;do neutron agent-delete $i ;done
@@ -93,9 +85,12 @@
 - name: restart neutron all service
   command: sudo {{ item }}
   with_items:
-   - "/etc/init.d/neutron-server restart"
-   - "/etc/init.d/neutron-linuxbridge-agent restart"
-   - "crm resource restart p_neutron-dhcp-agent"
-   - "crm resource restart p_neutron-l3-agent"
-   - "crm resource restart p_neutron-metadata-agent"
-  when: result|failed
+   - "service neutron-server restart"
+   - "service neutron-linuxbridge-agent restart"
+  # when: result|failed
+
+- name: config horizon bandwidth
+  command: sudo {{ item }}
+  with_items:
+   - "sed -i '/bandwidth/s/False/Ture/' /opt/horizon/openstack_dashboard/local/local_settings.py"
+   - "service httpd restart"
